<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/informacje"
        android:icon="@drawable/ic_baseline_info_24"
        android:iconTint="@color/white"
        android:title="@string/informacje"
        app:showAsAction="ifRoom"
        android:onClick="onMenuItemClick"
        tools:targetApi="o" />

    <item
        android:id="@+id/oceny"
        android:icon="@drawable/ic_baseline_looks_6_24"
        android:iconTint="@color/white"
        android:title="@string/oceny"
        app:showAsAction="ifRoom"
        android:onClick="onMenuItemClick"
        tools:targetApi="o" />

    <item
        android:id="@+id/logowanie"
        android:icon="@drawable/ic_baseline_logout_24"
        android:iconTint="@color/white"
        android:title="@string/zaloguj"
        app:showAsAction="ifRoom"
        android:onClick="onMenuItemClick"
        tools:targetApi="o" />
</menu>