<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/granatowy"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_baseline_menu_24"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/menu"
            android:onClick="showMenu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="75dp"
            android:text="@string/logowanie"
            android:textColor="@color/white"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            tools:targetApi="o" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTest"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/podaj_login_haslo"
            android:gravity="center"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:textColor="@color/granatowy"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/login_text"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@drawable/border"
            android:hint="@string/login"
            android:textColor="@color/granatowy"
            android:textStyle="bold"
            android:padding="6dp"
            android:textColorHint="#80000000"
            android:backgroundTint="@color/granatowy"/>

        <EditText
            android:id="@+id/haslo_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@drawable/border"
            android:hint="@string/haslo"
            android:textColor="@color/granatowy"
            android:textStyle="bold"
            android:padding="6dp"
            android:textColorHint="#80000000"
            android:backgroundTint="@color/granatowy"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/zaloguj_sie"
            android:textColor="@color/white"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/granatowy"/>

    </LinearLayout>

</LinearLayout>